--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -25,6 +25,8 @@
 .resume {
     padding-top: 50px;
     padding-bottom: 37.5px;
+    position: relative;
+    z-index: 4;
     .main-resume {
         font-size: 30px;
         line-height: 1.3;
@@ -75,6 +77,8 @@
 .content-section{
     padding: 37.5px 0px;
     font-size: 25px;
+    position: relative;
+    z-index: 1;
 
     .section-title{
         font-size: 14vw;
